--- a/src/scss/gui/gui_header_base.scss
+++ b/src/scss/gui/gui_header_base.scss
@@ -18,8 +18,8 @@
     }
 
     @include mq {
-        overflow-x: scroll;
-        height: $gui-size-unit-sp*2;
+        overflow-x: visible;
+        height: $gui-size-unit-sp;
         background: transparent;
     }
 }
